adding pagination in the api